rbx/rbx-frontend-prod-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rbx-frontend
spec:

  selector:
    matchLabels:
      app: rbx-frontend
  template:
    metadata:
      labels:
        app: rbx-frontend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3404"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: rbx-frontend
        image: ldamasio/rbx-frontend:latest
        ports:
            containerPort: 80
        volumeMounts:
          - name: rbx-share
            mountPath: /usr/share/nginx/html
      volumes:
        - name: rbx-share
          persistentVolumeClaim:
            claimName: rbx-pvc
