rbx/rbx-frontend-prod-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rbx-frontend-prod-svc
spec:
  selector:
    app: rbx-frontend-prod-deploy
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
