rbx/rbx-man-prod-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rbx-svc
spec:
  selector:
    app: rbx-svc
  ports:
    - port: 80
      targetPort: 3403
  type: LoadBalancer
