rbx/rbx-frontend-prod-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rbx-frontend-prod-ing
  annotations:
    cert-manager.io/cluster-issuer: "rbx-frontend-prod-clusterissuer"
spec:
  ingressClassName: "public"
  tls:
  - hosts:
    - rbxrobotica.com.br
    secretName: rbx-frontend-prod-secret
  rules:
  - host: rbxrobotica.com.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rbx-frontend-prod-svc
            port:
              number: 80
