rbx/rbx-frontend-prod-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rbx-frontend-prod-ingress
spec:
  rules:
  - host: rbxrobotica.com.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rbx-frontend-prod-svc
            port:
              number: 80
